syntax = "proto3";

//import "google/protobuf/wrappers.proto";
//import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
//import "scalapb/scalapb.proto";

package morphir;

service Gateway {
    rpc About (AboutRequest) returns (AboutResponse) {}
    rpc Initialize(InitializeRequest) returns (InitializeResponse) {}
}

message AboutRequest {}
message AboutResponse {
    string daemonVersion = 1;
    google.protobuf.Timestamp startTime = 2;
}

message InitializeRequest {

}

message InitializeResponse {
    int32 port = 1;
}
